Clear SonarCloud blockers before PR review completion
The PR quality gate was still failing on reliability annotations and a security hotspot after the review fixes. This change keeps the behavior intact while splitting long generation loops, narrowing plugin API casts, removing insecure default JMX flag construction, and cleaning small test/API smells called out by Sonar.

Constraint: SonarCloud issue details were private via API, so GitHub check-run annotations drove the local fixes

Rejected: Marking the hotspot safe in SonarCloud | would leave the script-level insecure JMX defaults in source

Confidence: medium

Scope-risk: moderate

Directive: Keep log/scenario loop helpers small; Sonar currently gates new PR code on these hotspots

Tested: ./mvnw -B clean install

Tested: npm run build

Not-tested: SonarCloud re-analysis result before push

Co-authored-by: OmX <omx@oh-my-codex.dev>